IE6 bug fixes, org names not appaering inline, content overlapping on people and minister pages and so on

--- a/app/assets/stylesheets/frontend/helpers/_document_list.scss
+++ b/app/assets/stylesheets/frontend/helpers/_document_list.scss
@@ -14,7 +14,7 @@
       text-align: left;
       float: left;
       display: inline;
-      width: 100%;
+      width: 85%;
       margin-top: $gutter-one-sixth;
       @media (min-width: 860px) {
         @include core-24;
