--- a/app/assets/stylesheets/frontend/helpers/_stick_at_top_when_scrolling.scss
+++ b/app/assets/stylesheets/frontend/helpers/_stick_at_top_when_scrolling.scss
@@ -1,7 +1,13 @@
 .content-fixed {
-  position: fixed!important;
+  position: relative;
   top: 0;
-  @include media(tablet){
-    position: relative;
+  @include media(desktop){
+  position: fixed;
+  }
+}
+.shim {
+  display: none;
+  @include media(desktop){
+    display: block;
   }
 }
